        [float]
        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* feat: support numeric and boolean labels {pull}1909[#1909] +
  Add an optional `stringify` option to `apm.setLabel(name, version, stringify = true)`
  and `apm.addLabels(labels, stringify = true)`, which can be set `false` to
  allow numeric and boolean labels. Stringify defaults to true for backwards
  compatibility -- stringification will be removed in a future major version.

[float]
===== Bug fixes


[[release-notes-3.10.0]]
==== 3.10.0 - 2021/01/11

[float]
===== Features

* feat: Improve handling of raw body parsing
  The agent will now report raw/`Buffer` encoded post bodies as '<Buffer>'.

* feat: Add support for api keys {pull}1818[#1818] +
  This allows the usage of API keys for authentication to the APM server

* feat: Add automatic instrumentation of the https://github.com/elastic/elasticsearch-js[@elastic/elasticsearch] package {pull}1877[#1870]
+
The instrumentation of the legacy "elasticsearch" package has also changed
slightly to commonalize:
+
** "span.context.destination" is set on all Elasticsearch spans, not just a
   subset of query-like API endpoints.
** For query-like API endpoints (e.g. `/_search`), the capturing of query details
   on "span.context.db.statement" has changed (a) to include *both* the
   query params and the request body if both exist (separated by `\n\n`) and
   (b) to *URL encode* the query params, rather than JSON encoding.

* feat: Add `captureAttributes` boolean option to `apm.captureError()` to
  allow *disabling* the automatic capture of Error object properties. This