@@ -36,6 +36,10 @@ Notes:
 [float]
 ===== Features
 
+* feat: add `apm.getServiceName()` {pull}1949[#1949] +
+  This will be used by https://github.com/elastic/ecs-logging-js[ecs-logging packages]
+  to integrate with APM.
+
 * feat: support numeric and boolean labels {pull}1909[#1909] +
   Add an optional `stringify` option to `apm.setLabel(name, version, stringify = true)`
   and `apm.addLabels(labels, stringify = true)`, which can be set `false` to
